<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_userSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_view_hint"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_album_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/sv_userSearch"
        tools:listitem="@layout/view_album_list_item"/>
</androidx.constraintlayout.widget.ConstraintLayout>
