<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <ImageView
        android:id="@+id/iv_album"
        android:layout_width="@dimen/large_image_dimens"
        android:layout_height="@dimen/large_image_dimens"
        android:layout_marginTop="@dimen/margin_large"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/tv_albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/dummy_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/tv_artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/dummy_name"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/text_size_large"/>
</LinearLayout>